[gd_scene load_steps=4 format=3 uid="uid://bco4n745nwc3e"]

[ext_resource type="Script" path="res://first_prototype/text_message_element.gd" id="1_vye2p"]


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcmi0"]
bg_color = Color(0.0117647, 0.0196078, 0.027451, 0.462745)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7q2w"]

[node name="TextElement" type="PanelContainer"]
custom_minimum_size = Vector2(256, 25)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -55.5
offset_right = 128.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qcmi0")
script = ExtResource("1_vye2p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AuthorTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
text = "AuthorTitle"
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_r7q2w")

[node name="AuthorMessage" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
text = "AuthorMessage A lot of lore iasdiasdijajsidij asdijasd jdjaisidjasidajsid"
fit_content = true
scroll_active = false
